# SpielGantt

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/agent-templates/: AGENTS.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_scaffold.rs  app_facade.rs  app_mutation_refresh.rs  dependency_relationships.rs  diagnostics.rs  event.rs  event_axis_workflow.rs  lib.rs  main.rs  mutation_plan.rs  package_mutation.rs  project_actions.rs  project_graph.rs  project_lifecycle.rs  project_namespace.rs  project_payload.rs  relative_task_insert.rs  runtime.rs  semantic_projection.rs  snapshot.rs  task.rs  task_actions.rs  task_adoptable_folders.rs  task_edit_action.rs  task_metadata_mutations.rs  task_package_index.rs  tauri_commands.rs  validation.rs
src-tauri/tests/: agent_cli.rs  agent_cli_contract.rs  agent_json_cli.rs  agent_prepare_cli.rs  app_event_actions.rs  app_facade.rs  app_project_actions.rs  app_project_create.rs  app_project_onboard.rs  app_project_open.rs  app_project_refresh.rs  app_task_actions.rs  cache_repair_cli.rs  cli_smoke.rs  documentation_examples.rs  event_axis_workflow_cli.rs  event_list_cli.rs  event_mutation_cli.rs  init_cli.rs  load_error_cli.rs  metadata_contract.rs  mutation_planning.rs  normalize_cli.rs  package_mutation.rs  project_export_cli.rs  project_graph.rs  project_readme_cli.rs  project_root.rs  project_snapshot.rs  task_adopt_cli.rs  task_create_cli.rs  (+11 more)
(+130 files in other folders)
