[package]
name = "spielgantt"
version = "1.0.0-rc.1"
description = "A local-first Gantt tool for scientific workflows"
authors = ["SpielGantt contributors"]
license = "BSD-3-Clause"
edition = "2021"

[lib]
name = "spielgantt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
walkdir = "2"
clap = { version = "4.5", features = ["derive"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

[dev-dependencies]
tempfile = "3"
